src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Pardot_Area_of_Interest__c</fullName>
        <description>For GDPR, field used to synchronize field Area_of_Interest of Pardot in SF and to store in individual object</description>
        <label>Pardot_Area_of_Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air navigation services</fullName>
                </value>
                <value>
                    <fullName>Airline management</fullName>
                </value>
                <value>
                    <fullName>Airline operations and quality</fullName>
                </value>
                <value>
                    <fullName>Airport planning, operations and management</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Civil aviation</fullName>
                </value>
                <value>
                    <fullName>Dangerous goods</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Fares and ticketing</fullName>
                </value>
                <value>
                    <fullName>Financial services and revenue management</fullName>
                </value>
                <value>
                    <fullName>Flight operations</fullName>
                </value>
                <value>
                    <fullName>Ground operations</fullName>
                </value>
                <value>
                    <fullName>Law and regulations</fullName>
                </value>
                <value>
                    <fullName>Passenger services</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Security and risk management</fullName>
                </value>
                <value>
                    <fullName>Travel and tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_CCITT__c</fullName>
        <label>Phone - CCITT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Training_Language__c</fullName>
        <label>Preferred Training Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Portugese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_associated__c</fullName>
        <label>Product associated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airport IS</fullName>
                </value>
                <value>
                    <fullName>Cargo IS</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Data AirHouse</fullName>
                </value>
                <value>
                    <fullName>Enhancement &amp; Financial Services</fullName>
                </value>
                <value>
                    <fullName>Global Data Products</fullName>
                </value>
                <value>
                    <fullName>PAX IS</fullName>
                </value>
                <value>
                    <fullName>Sales Aid</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
                <value>
                    <fullName>Training: In Company</fullName>
                </value>
                <value>
                    <fullName>Training: RTC partners</fullName>
                </value>
                <value>
                    <fullName>Weblink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publications__c</fullName>
        <label>Publications</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used for Corp Com leads in order to extract &apos;contact&apos; within a specific region</description>
        <label>Corp Comms Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Latin America &amp; The Caribbean</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; North Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Russia &amp; CIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Process_aborted_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Process aborted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Africa &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; North Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Russia &amp; CIS</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>The Americas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Notifications__c</fullName>
        <label>Send Notifications</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_the_group__c</fullName>
        <label>Size of the group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3-8</fullName>
                </value>
                <value>
                    <fullName>9-14</fullName>
                </value>
                <value>
                    <fullName>15-20</fullName>
                </value>
                <value>
                    <fullName>21-25</fullName>
                </value>
                <value>
                    <fullName>26+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used for the Corp Com Leads to reflect the status of the Lead (Contact)</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_100__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for &apos;tagging&apos; VIP press contacts by Corp Com</description>
        <label>Top 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Dates_Month__c</fullName>
        <label>Training Dates (Month)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Subject_area__c</fullName>
        <description>Training subject areas for In-Company form on iata.org</description>
        <label>Training Subject area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air Navigation Services</fullName>
                </value>
                <value>
                    <fullName>Airline Business Management</fullName>
                </value>
                <value>
                    <fullName>Airline Operations and Quality</fullName>
                </value>
                <value>
                    <fullName>Airport Planning, Operations and Management</fullName>
                </value>
                <value>
                    <fullName>Management and Leadership</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Civil Aviation Authorities</fullName>
                </value>
                <value>
                    <fullName>Dangerous Goods Regulations</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Fares and Ticketing</fullName>
                </value>
                <value>
                    <fullName>Finance and Accounting</fullName>
                </value>
                <value>
                    <fullName>Ground Operations</fullName>
                </value>
                <value>
                    <fullName>Law and Regulations</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Travel and Tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typeofcustomer__c</fullName>
        <label>Type of customer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Airline industry</fullName>
                </value>
                <value>
                    <fullName>Alliances</fullName>
                </value>
                <value>
                    <fullName>Associate Member</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Financial institution</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>IATA Cargo Agent</fullName>
                </value>
                <value>
                    <fullName>IATA Member Airline</fullName>
                </value>
                <value>
                    <fullName>IATA Passenger Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Industry Association</fullName>
                </value>
                <value>
                    <fullName>Industry Equipment and Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Industry Provider</fullName>
                </value>
                <value>
                    <fullName>Inflight Services</fullName>
                </value>
                <value>
                    <fullName>IT/Telecoms</fullName>
                </value>
                <value>
                    <fullName>Newspaper/Magazine</fullName>
                </value>
                <value>
                    <fullName>Newswire</fullName>
                </value>
                <value>
                    <fullName>Non-IATA Cargo Agent</fullName>
                </value>
                <value>
                    <fullName>Non-IATA Passenger Agent</fullName>
                </value>
                <value>
                    <fullName>Non Member</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Policy Maker</fullName>
                </value>
                <value>
                    <fullName>Research institute</fullName>
                </value>
                <value>
                    <fullName>School / Academy / University</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_form_Code__c</fullName>
        <label>Web form Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dgAI2__DG_Capture_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DG Capture Analytics denotes when we log feedback to send DigitalGenius after a prediction attempt.</description>
        <inlineHelpText>DG Capture Analytics denotes when we log feedback to send DigitalGenius after a prediction attempt.</inlineHelpText>
        <label>DG Capture Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dgAI2__DG_Fill_Status__c</fullName>
        <description>DG Fill Status denotes the status for DigitalGenius prediction.</description>
        <inlineHelpText>DG Fill Status denotes the status for DigitalGenius prediction.</inlineHelpText>
        <label>DG Fill Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Filled - Completely</fullName>
                </value>
                <value>
                    <fullName>Filled - Partially</fullName>
                </value>
                <value>
                    <fullName>Not Filled - No Model Found</fullName>
                </value>
                <value>
                    <fullName>Not Filled - Confidence Too Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AME_Training_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>AME Training Leads</label>
        <queue>AME_Training_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCCLeadsPublications</fullName>
        <booleanFilter>(1 OR 2 )AND 3</booleanFilter>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Luo,Leblanc,atanassov,gbodossou,dufour,ghoche,provencher</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>rodriguez,concessio,mckay</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>alfredo</value>
        </filters>
        <label>CCC Leads - Publications</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSDirectSalesAll</group>
            <role>VPMACS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Sales_Lead</fullName>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>DSE__DS_Account__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>CSC Sales</label>
        <language>en_US</language>
        <queue>CSC_Sales</queue>
    </listViews>
    <listViews>
        <fullName>Created_Online</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>IATA-Sys</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/19/2019 12:00 AM</value>
        </filters>
        <label>Created Online</label>
        <language>en_US</language>
        <sharedTo>
            <role>Distance_Learning</role>
            <role>MarketingManager</role>
            <role>Marketing_Specialist</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSAllIATACommercial</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DirectSalesAll</fullName>
        <filterScope>Queue</filterScope>
        <label>Direct Sales - All</label>
        <language>en_US</language>
        <queue>DirectSalesAll</queue>
        <sharedTo>
            <group>MACSDirectSalesAll</group>
            <group>MACSLOBs</group>
            <group>MACSMarketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DirectSalesArea1</fullName>
        <columns>Area__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Phone_CCITT__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>01220000000030A</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Queue</value>
        </filters>
        <label>Direct Sales - Area 1</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSDirectSalesAll</group>
            <role>VPMACS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DirectSalesArea2</fullName>
        <columns>Area__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Phone_CCITT__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>01220000000030A</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Queue</value>
        </filters>
        <label>Direct Sales - Area 2</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSDirectSalesAll</group>
            <role>VPMACS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DirectSalesArea3</fullName>
        <columns>Area__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Phone_CCITT__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>01220000000030A</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>Queue</value>
        </filters>
        <label>Direct Sales - Area 3</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSDirectSalesAll</group>
            <role>VPMACS</role>
        </sharedTo>
    </listViews>
</CustomObject>